[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-debug-assistant"
version = "0.1.0"
description = "Tools for analyzing and fixing common ROS 2 package issues."
authors = [
    { name = "José Luis Pérez Martín" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
